# Jellyfish-with-Robotics

./: README.md
CAN/: README.md
Course/ROS2_Tutorial/action_tutorials/: CMakeLists.txt  README.md  package.xml
Course/ROS2_Tutorial/cpp_parameters/: package.xml
Course/ROS2_Tutorial/cpp_srvcli/: package.xml
Course/ROS2_Tutorial/launch/: README.md
Course/ROS2_Tutorial/my_package_cmake/: CMakeLists.txt
Course/ROS2_Tutorial/my_package_python/: README.md
Course/ROS2_Tutorial/py_pubsub/: setup.py
Course/ROS2_Tutorial/python_parameters/: README.md
Course/ROS2_Tutorial/test_msg_and_srv_python/: package.xml  setup.cfg
Course/Robotics/: README.md
Crazy-Car/Dynamixel/: CMakeCache.txt
Crazy-Car/Dynamixel/src/: main.cpp
Crazy-Car/piCamera/: finishSerial.py  main.py
Crazy-Car/testL293d/: testL293d.ino
CrazyCar/: finishSerial.py
CrazyCar/Dynamixel/: dynamixel
CrazyCar/Dynamixel/src/: dynamixel.cpp
Jetbot/mqtt_example/: CMakeLists.txt
Jetbot/mqtt_example/scripts/: mqtt.py  test_mqtt.py
KLTN/: README.md
KLTN/F-ck/: CMakeLists.txt  README.md  arucoDetection.cpp  fakeDetection.cpp
KLTN/KLTN-T.ANH/: README.md
KLTN/KLTN-T.ANH/UNO/: UNO.ino
KLTN/KLTN-T.ANH/mqtt_esp8266/: mqtt_esp8266.ino
KLTN/KLTN-T.ANH/pubsub_esp_len_mqtt/: pubsub_esp_len_mqtt.ino
KLTN/control/: main.cpp
KLTN/mavsdk_node/: CMakeLists.txt  package.xml
KLTN/mavsdk_node/src/: main.cpp
KLTN/transfromCoordinate/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
KLTN/tx2/: CMakeLists.txt
KLTN/tx2/cfg/: t265.yaml
KLTN/tx2/src/: t265_fisheye_undistort.cpp
KLTN/vision_to_mavros/: CMakeLists.txt
KLTN/vision_to_mavros/src/: t265_fisheye_undistort.cpp
MPU9250_Kalman/: README.md  test.ino.ino  test_motor.ino
Makefile/: README.md
Manipulator/CLionProjects/Kinematic/: main.cpp
Manipulator/CLionProjects/MachineHand/: CMakeLists.txt
Manipulator/CLionProjects/MachineHand/include/: common.h  dynamixel.h  kinematics.h
Manipulator/CLionProjects/MachineHand/src/: main.cpp
Manipulator/CLionProjects/MecanumControl/: main.cpp
Manipulator/Manipulator/include/: custom_trajectory.h  kinematic.h  manipulator.h  robotis_manipulator_common.h  robotis_manipulator_manager.h  robotis_manipulator_trajectory_generator.h
Manipulator/Manipulator/src/: robotis_manipulator.cpp  robotis_manipulator_manager.cpp
Manipulator/Manipulator_ver1/: CMakeLists.txt
Manipulator/Manipulator_ver1/include/manipulator_base/: manipulator_common.h  manipulator_log.h  manipulator_math.h
Manipulator/Manipulator_ver1/include/my_manipulator/: custom_trajectory.h  dynamixel.h  kinematics.h  my_manipulator.h
Manipulator/Manipulator_ver1/src/dynamixel_sdk/: dynamixel.h
Manipulator/Manipulator_ver1/src/manipulator_base/: manipulator_log.cpp  manipulator_manager.cpp  manipulator_trajectory_generator.cpp
Manipulator/Manipulator_ver1/src/my_manipulator/: dynamixel.cpp  kinematics.cpp
Manipulator/ROBOTIS_OpenManipulator_Chain/: LICENSE.txt  README.txt
Manipulator/ROBOTIS_OpenManipulator_Chain/files/: Base_Cover.stl  CRANK_ARM.stl  FLANGE_BUSH.stl  Horn_Cover.stl  LINK_ROD.stl  Motor_Cover.stl  PALM_GRIPPER.stl
Manipulator/Script/: CMakeLists.txt  main.cpp
Manipulator/my_manipulator/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
Manipulator/my_manipulator/src/: main.cpp
MiniProject/Crazy-Car/: README.md
MiniProject/Crazy-Car/Dynamixel/: cmake_install.cmake
MiniProject/Crazy-Car/serial/: serial.ino
MiniProject/CrazyCar/: README.md
MiniProject/CrazyCar/Dynamixel/: CMakeLists.txt  Makefile
MiniProject/CrazyCar/Dynamixel/include/: dynamixel.h
MiniProject/CrazyCar/Dynamixel/include/dynamixel_sdk/: dynamixel_sdk.h  group_sync_read.h  packet_handler.h
MiniProject/CrazyCar/serial/: motorControl.cpp  motorControl.h
MiniProject/Jetbot/mqtt_example/: package.xml
MiniProject/Manipulator/Manipulator/: CMakeLists.txt
MiniProject/Manipulator/Manipulator/include/: robotis_manipulator.h  robotis_manipulator_log.h  robotis_manipulator_math.h
MiniProject/Manipulator/Manipulator/src/: custom_trajectory.cpp  kinematic.cpp  manipulator.cpp  robotis_manipulator_common.cpp  robotis_manipulator_log.cpp  robotis_manipulator_math.cpp  robotis_manipulator_trajectory_generator.cpp
MiniProject/Manipulator/ROBOTIS_OpenManipulator_Chain/: attribution_card.html
MiniProject/StupidRobot/gpio_node/: CMakeLists.txt  package.xml
MiniProject/StupidRobot/poseT265/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
MiniProject/StupidRobot/ver2/: package.xml
MiniProject/try_something/my_package/: CMakeLists.txt
Operating-System/6-Processes/: processes.md
ROS2_Tutorial/: README.md
ROS2_Tutorial/bag_files/rosbag2_2020_07_16-09_43_52/: rosbag2_2020_07_16-09_43_52_0.db3
ROS2_Tutorial/cpp_parameters/: README.md
ROS2_Tutorial/cpp_pubsub/: package.xml
ROS2_Tutorial/cpp_srvcli/src/: add_two_ints_client.cpp
ROS2_Tutorial/more_interfaces/: CMakeLists.txt  README.md  package.xml
ROS2_Tutorial/my_package_cmake/: README.md  package.xml
ROS2_Tutorial/my_package_cmake/src/: my_node.cpp
ROS2_Tutorial/my_package_python/: package.xml  setup.cfg  setup.py
ROS2_Tutorial/py_pubsub/: README.md  package.xml
ROS2_Tutorial/py_srvcli/: README.md  package.xml  setup.py
ROS2_Tutorial/python_parameters/: package.xml  setup.py
ROS2_Tutorial/python_parameters/python_parameters/: python_parameters_node.py
ROS2_Tutorial/test_msg_and_srv_cplusplus/: CMakeLists.txt  package.xml
ROS2_Tutorial/test_msg_and_srv_python/: setup.py
ROS2_Tutorial/tutorial_interfaces/: README.md  package.xml
StupidRobot/: README.md
StupidRobot/poseT265/: main.cpp
StupidRobot/ver1/: CMakeLists.txt
StupidRobot/ver2/: CMakeLists.txt
StupidRobot/ver2/src/: main.cpp
StupidRobot/ver3/src/: main.cpp
StupidRobot/ver4/: CMakeLists.txt  package.xml
StupidRobot/ver5/src/: main.cpp
try_something/beginner_tutorials/: CMakeLists.txt  package.xml
try_something/mecanum/: CMakeLists.txt  package.xml
try_something/my_package/: package.xml
try_something/my_package/msg/: Num.msg
(+85 files in other folders)
